--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .container {
-    max-width: 900px;
+    max-width: 700px;
     margin: auto;
 }
 
@@ -38,7 +38,7 @@ nav {
 
 #links-bar ul li {
     border: 1px solid green;
-    width: 80px; 
+    width: 50px; 
     height: 20px; 
 }
 
@@ -57,18 +57,73 @@ header {
 
 h1 {
     border: 1px solid red;
-    width: 600px; 
+    width: 400px; 
     height: 40px; 
 }
 
 p {
     border: 1px solid blue;
-    width: 600px; 
+    width: 400px; 
     height: 100px; 
 }
 
-#download-button, #open-button {
+#download-button, #open-button, #mac-download-button {
     border: 1px solid green;
     width: 150px;
     height: 40px; 
 }
+
+.site-desc {
+    display: flex;
+    gap: 10px;
+    border: 2px dotted yellowgreen;
+    padding: 50px;
+}
+
+img {
+    border: 1px solid fuchsia;
+    width: 250px;
+    height: 250px;
+}
+
+h2 {
+    border: 1px solid red;
+    width: 100%; 
+    height: 80px; 
+    align-self: baseline;
+}
+
+aside {
+    border: 1px solid blue;
+    width: 400px; 
+    height: 100px; 
+}
+
+.site-desc-end {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    border: 2px dotted yellowgreen;
+    padding: 50px;
+}
+
+.site-desc-end h2 {
+    width: 400px;
+    height: 40px;
+    align-self: center;
+}
+
+.site-desc-end img {
+    width: 100%;
+    margin-bottom: 50px;
+}
+
+.site-desc-end h3 {
+    border: 1px solid red;
+    width: 200px;
+    height: 30px;
+    align-self: center;
+}
+
