--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ nav {
     padding: 5px; /* to be deleted in final layout */
 }
 
-#logo, #login{
+#logo-top, #login{
     border: 1px solid black; /* to be deleted in final layout */
     width: 100px;
     height: 100%; 
@@ -56,19 +56,19 @@ header {
 }
 
 h1 {
-    border: 1px solid red;
+    border: 1px solid red; /* to be deleted in final layout */
     width: 400px; 
     height: 40px; 
 }
 
 p {
-    border: 1px solid blue;
+    border: 1px solid blue; /* to be deleted in final layout */
     width: 400px; 
     height: 100px; 
 }
 
 #download-button, #open-button, #mac-download-button {
-    border: 1px solid green;
+    border: 1px solid green; /* to be deleted in final layout */
     width: 150px;
     height: 40px; 
 }
@@ -76,25 +76,25 @@ p {
 .site-desc {
     display: flex;
     gap: 10px;
-    border: 2px dotted yellowgreen;
+    border: 2px dotted yellowgreen; /* to be deleted in final layout */
     padding: 50px;
 }
 
 img {
-    border: 1px solid fuchsia;
+    border: 1px solid fuchsia; /* to be deleted in final layout */
     width: 250px;
     height: 250px;
 }
 
 h2 {
-    border: 1px solid red;
+    border: 1px solid red; /* to be deleted in final layout */
     width: 100%; 
     height: 80px; 
     align-self: baseline;
 }
 
 aside {
-    border: 1px solid blue;
+    border: 1px solid blue; /* to be deleted in final layout */
     width: 400px; 
     height: 100px; 
 }
@@ -105,8 +105,9 @@ aside {
     align-items: center;
     justify-content: center;
     gap: 10px;
-    border: 2px dotted yellowgreen;
+    border: 2px dotted yellowgreen; /* to be deleted in final layout */
     padding: 50px;
+    width: 100%;
 }
 
 .site-desc-end h2 {
@@ -121,9 +122,48 @@ aside {
 }
 
 .site-desc-end h3 {
-    border: 1px solid red;
+    border: 1px solid red; /* to be deleted in final layout */
     width: 200px;
     height: 30px;
     align-self: center;
 }
 
+footer {
+    background-color: grey; /* random colour, to be adj in final layout */ 
+    padding: 50px;
+}
+
+.flex-footer {
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid green; /* to be deleted in final layout */
+    padding: 5px; /* to be deleted in final layout */
+    padding-bottom: 20px;
+    border-bottom-color: black;
+}   
+
+.footer-lists {
+    border: 1px dashed orange; /* to be deleted in final layout */
+    width: 100px;
+    height: 150px;
+}
+
+.footer-lists ul {
+    list-style-type: none;
+}
+
+#Contatti {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+#page-end {
+    padding-top: 10px;
+}
+
+#logo-bottom, #sign-up {
+    border: 1px solid green; /* to be deleted in final layout */
+    width: 80px;
+    height: 40px;
+}
